OrderDetail.html form created

--- a/FrontEnd/pages/adminPages/CustomerManagement.html
+++ b/FrontEnd/pages/adminPages/CustomerManagement.html
@@ -69,6 +69,7 @@
 <div class="sidebar">
   <a href="../../pages/adminDashboard.html">Dashboard</a>
   <a href="../adminPages/SaleManagement.html">Sales</a>
+  <a href="../adminPages/OrderDetails.html">Sale Details</a>
   <a href="../adminPages/SupplierManagement.html">Suppliers</a>
   <a href="../adminPages/CustomerManagement.html">Customers</a>
   <a href="../adminPages/EmployeeManagement.html">Employees</a>
