--- a/FrontEnd/pages/login.html
+++ b/FrontEnd/pages/login.html
@@ -3,85 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <title>Login Page</title>
-    <!--<link rel="stylesheet" href="../../assets/icon/icon.jpeg" >-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #f8f9fa;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
 
-    <meta content="Shoe Shop Management System" name="keywords">
-    <meta content="This is shoe management project" name="description">
-    <meta content="Sethmini Dissanayake" name="author">
-    <meta content="Sethmini Dissanayake" name="owner">
-    <meta content="width=device-width initial-scale=1 maximum-scale=1 minimum-scale=1 user-scalable=no" name="viewport">
-    <meta content="green" name="theme-color">
+        .login-container {
+            max-width: 400px;
+            width: 100%;
+            padding: 40px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
 
-    <link href="../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+        .login-container h3 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
 
-    <link href="../assets/vendor/styleslog/sb-admin-2.min.css" rel="stylesheet">
-    <link href="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        .login-container .form-group {
+            margin-bottom: 20px;
+        }
+
+        .login-container .form-control {
+            border-radius: 4px;
+        }
+
+        .login-container .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            transition: background-color 0.3s ease;
+        }
+
+        .login-container .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #004a99;
+        }
+
+        .login-container .text-muted,
+        .login-container .text-primary {
+            font-size: 14px;
+        }
+    </style>
 </head>
-
-<body style="background-color: #f8f9fa">
-
-<div>
-    <div class="container login-container" style="margin-top: 1%">
-        <div class="row justify-content-center">
-            <div class="col-md-8 col-lg-6">
-                <div class="card">
-                    <div class="card-body">
-                        <h3 class="card-title text-center">Welcome to HELLO SHOE PVT_LTD</h3>
-
-                        <div class="text-center mb-3">
-                            <img src="../assets/img/man-key-near-computer-account-260nw-1499141258.webp" alt="Login Image" style="max-width: 100%; height: 375px;">
-                        </div>
-
-                        <form>
-                            <div class="form-group">
-                                <select class="form-control" id="roleType" name="roleType" >
-                                    <option value="RoleType">Choose Role</option>
-                                    <option value="ADMIN">ADMIN</option>
-                                    <option value="REGISTERED_USER">REGISTERED_USER</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label for="username" >Username</label>
-                                <input type="text" class="form-control" id="username" placeholder="Enter your username">
-                            </div>
-                            <div class="form-group">
-                                <label for="password">Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="Enter your password">
-                            </div>
-                            <div class="form-group">
-                                <div class="custom-control custom-checkbox small">
-                                    <input type="checkbox" class="custom-control-input" id="customCheck">
-                                    <label class="custom-control-label" for="customCheck">Remember
-                                        Me</label>
-                                </div>
-                            </div>
-                            <button type="submit" class="btn btn-primary btn-block" id="btnLogin">Login</button>
-                            <hr>
-                            <div class="text-center mt-3">
-                                <a href="#" class="text-muted">Forgot Password?</a>
-                            </div>
-                            <div class="text-center mt-2">
-                                <p>Don't have an account? <a href="#" class="text-primary">Create an Account</a></p>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
+<body>
+<div class="login-container">
+    <h3>Welcome to HELLO SHOE PVT_LTD</h3>
+    <form>
+        <div class="form-group">
+            <select class="form-control" id="roleType" name="roleType">
+                <option value="RoleType">Choose Role</option>
+                <option value="ADMIN">ADMIN</option>
+                <option value="REGISTERED_USER">REGISTERED_USER</option>
+            </select>
         </div>
+        <div class="form-group">
+            <input type="text" class="form-control" id="username" placeholder="Enter your username">
+        </div>
+        <div class="form-group">
+            <input type="password" class="form-control" id="password" placeholder="Enter your password">
+        </div>
+        <div class="form-group form-check">
+            <input type="checkbox" class="form-check-input" id="customCheck">
+            <label class="form-check-label" for="customCheck">Remember Me</label>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block" id="btnLogin">Login</button>
+    </form>
+    <hr>
+    <div class="text-center mt-3">
+        <a href="#" class="text-muted">Forgot Password?</a>
+    </div>
+    <div class="text-center mt-2">
+        <p>Don't have an account? <a href="#" class="text-primary">Create an Account</a></p>
     </div>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
-
     $("#btnLogin").on('click', function () {
         login();
     });
 
-    function login(){
+    function login() {
         let loginRole_Type = $("#roleType").val();
         let loginUserName = $("#username").val();
         let loginPassword = $("#password").val();
@@ -103,15 +115,15 @@
                             });
                             window.location.href="";
                         }else if(loginRole_Type==="ADMIN" && loginUserName===login.username && loginPassword===login.password){
-                           window.location.href="adminDashboard.html";
+                            window.location.href="adminDashboard.html";
                         }
                         return;
                     }
                 }
             }
         })
-    }
 
+    }
 </script>
 </body>
 </html>
